make spaces on board circles

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <table id="board"></table>
   </div>
 </div>
+<div id="refresh" class="gamePlay">Refresh Page to start New Game!</div> <!--Hidden during game play. Revealed after game ends-->
+
 
 <script src="connect4.js"></script>
 
